Change CSV file path in notebook
Updated the file path for reading the CSV.

--- a/razavi-hamed-final.ipynb
+++ b/razavi-hamed-final.ipynb
@@ -124,7 +124,7 @@
     "nltk.download('wordnet')\n",
     "\n",
     "# Load the CSV\n",
-    "df = pd.read_csv(r\"C:\\Users\\haraz\\Box\\Hamed_PC\\2-Spring 25\\Text Mining\\W15\\medical_conversations.csv\")\n",
+    "df = pd.read_csv(r\"C:\\Users\\path\")\n",
     "\n",
     "# Keep only relevant columns\n",
     "df = df[['conversations', 'disease']].dropna()\n",
